force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Badge_Style_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Badge_Style_Field__c</fullName>
    <inlineHelpText>API name of the formula field returning the background and text color of the badge</inlineHelpText>
    <label>Badge Style Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>