force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Default_Sort_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for sorting the list when it is displayed. for the first time</description>
    <label>Default Sort Field</label>
    <type>Checkbox</type>
</CustomField>