force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Display_as_Badge__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Display_as_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the field will be rendered as a badge</inlineHelpText>
    <label>Display as Badge</label>
    <type>Checkbox</type>
</CustomField>