force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Display_Order__c</fullName>
    <inlineHelpText>Position of the field in the list from lowest to greatest</inlineHelpText>
    <label>Display Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>