force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Display_Type__c</fullName>
    <inlineHelpText>Display type of the field. Required with Apex Data Source lists. 
File Preview can only be used with Files lists.</inlineHelpText>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>CLICK2DIAL</fullName>
                <label>Click-to-Dial</label>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
                <label>Currency</label>
            </value>
            <value>
                <fullName>CURRENCY_CONVERTED</fullName>
                <label>Currency Converted</label>
            </value>
            <value>
                <fullName>CURRENCY_FORMATTED</fullName>
                <label>Currency Formatted</label>
            </value>
            <value>
                <fullName>DATE</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>DATETIME</fullName>
                <label>Datetime</label>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
                <label>Double</label>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>FILE_PREVIEW</fullName>
                <label>File Preview</label>
            </value>
            <value>
                <fullName>HTML</fullName>
                <label>Html</label>
            </value>
            <value>
                <fullName>HYPERLINK_DETAIL</fullName>
                <label>Hyperlink to Detail</label>
            </value>
            <value>
                <fullName>INTEGER</fullName>
                <label>Integer</label>
            </value>
            <value>
                <fullName>LOCATION</fullName>
                <label>Location</label>
            </value>
            <value>
                <fullName>PERCENT</fullName>
                <label>Percent</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>STRING</fullName>
                <label>String</label>
            </value>
            <value>
                <fullName>TIME</fullName>
                <label>Time</label>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>URL_LABEL</fullName>
                <label>URL with Label</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>