force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Dynamic_Style_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Dynamic_Style_Field__c</fullName>
    <inlineHelpText>API  name of a text formula field returning the dynamic styling attributes of the field</inlineHelpText>
    <label>Dynamic Style Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>