force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Field_Label__c</fullName>
    <inlineHelpText>Enter a text value or $Label­.CustomLabelName or leave blank.
Required with Apex Data Source lists.
With Files and SOQL lists, the label of the database field is used if left blank</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>