force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Field_Name__c</fullName>
    <inlineHelpText>With SOQL and Files lists, API name of the field. Can include a reference to a parent object: Owner.Name or ProductType__r.Subtype__c

Field name for Apex Data Source</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>