force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Filterable__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is deprecated: Use Display in Quick Filters instead
The field is filterable in the quick filters. Only used with Apex Data Source</inlineHelpText>
    <label>Filterable (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>