force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Hyperlink_to_Detail_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Hyperlink_to_Detail_Id_Field__c</fullName>
    <inlineHelpText>Only used if Display Type = Hyperlink to Detail.
Field of the record containing the Id of the target record.
For SOQL and Files list, enter a value if you don&apos;t want to use the default value
Required for Apex Data Source.</inlineHelpText>
    <label>Hyperlink to Detail: Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>