force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Lookup_in_Quick_Filters__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Lookup_in_Quick_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the filter is displayed as a lookup in the Filters Panel. Otherwise, it is displayed as text field
Examples for Account.Name on Cases list:
- if checked and user picks the Edge Corp. account, the search will return all cases related to this account.
- If unchecked and user enters Acme in the text field, the search will return all the cases related to accounts containing Acme in their name: Acme Corp., Acme Construction
Only available for related fields of type Text</inlineHelpText>
    <label>Lookup in Filters Panel</label>
    <type>Checkbox</type>
</CustomField>