force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Lookup_Subtitle_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Lookup_Subtitle_Field__c</fullName>
    <inlineHelpText>Field that is displayed in the lookup search results in addition to Name
Must be a Text field</inlineHelpText>
    <label>Lookup Subtitle Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>