force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Quick_Filters_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Quick_Filters_Field__c</fullName>
    <defaultValue>&apos;Yes if Filterable&apos;</defaultValue>
    <inlineHelpText>If &apos;Yes if Filterable&apos; is selected, the field will be added to the Filters Panel if it is filterable at the object level. Some fields are not filterable because of their data type or because they are encrypted with the probabilistic algorithm</inlineHelpText>
    <label>Display in Filters Panel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes if Filterable</fullName>
                <default>true</default>
                <label>Yes if Filterable</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>