force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Sortable__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is deprecated: Use Sortable in list instead
The field is sortable in the list. Only used with Apex Data Source</inlineHelpText>
    <label>Sortable (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>