force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Tile_Header__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Tile_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the field is part of the Tite header, otherwise it is part of the tile content</inlineHelpText>
    <label>Display in Tile Header</label>
    <type>Checkbox</type>
</CustomField>