force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__URL_Target__c.field-meta.xml
<CustomField>
    <fullName>smartlists__URL_Target__c</fullName>
    <inlineHelpText>Select _self if you want to display the URL in the current tab. Select _blank if you want to display the URL in a new tab.
Note: _self can only be used with Salesforce URLs. Non Salesforce URLs are opened in a new tab</inlineHelpText>
    <label>URL with Label: Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>_blank</fullName>
                <default>true</default>
                <label>_blank</label>
            </value>
            <value>
                <fullName>_parent</fullName>
            </value>
            <value>
                <fullName>_self</fullName>
                <label>_self (Salesforce URL only)</label>
            </value>
            <value>
                <fullName>_top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>