force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__URL_Value__c.field-meta.xml
<CustomField>
    <fullName>smartlists__URL_Value__c</fullName>
    <inlineHelpText>Field returning the URL associated to the URL label returned by Field Name</inlineHelpText>
    <label>URL with Label: Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>