force-app/main/default/objects/smartlists__Smart_List_Field__mdt/fields/smartlists__Wrap_Text__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Wrap_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the row will be expanded to display the content of the cell on several lines. Otherwise, the content of the cell is clipped to the size of the column</inlineHelpText>
    <label>Wrap Text</label>
    <type>Checkbox</type>
</CustomField>