force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Badge_Style_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Badge_Style_Field</fullName>
    <active>true</active>
    <errorConditionFormula>smartlists__Display_as_Badge__c = true &amp;&amp;  ISBLANK( smartlists__Badge_Style_Field__c )</errorConditionFormula>
    <errorDisplayField>smartlists__Badge_Style_Field__c</errorDisplayField>
    <errorMessage>Badge Style Field is required if the field is displayed as a Badge</errorMessage>
</ValidationRule>