force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Display_Position.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Display_Position</fullName>
    <active>true</active>
    <errorConditionFormula>smartlists__List_Field__c == true &amp;&amp; ISBLANK(smartlists__Display_Position__c)</errorConditionFormula>
    <errorDisplayField>smartlists__Display_Position__c</errorDisplayField>
    <errorMessage>Display Position is required for List fields</errorMessage>
</ValidationRule>