force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Display_Position_QuickFilters.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Display_Position_QuickFilters</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( smartlists__Quick_Filters_Field__c, &apos;Yes if Filterable&apos; ) &amp;&amp; ISBLANK( smartlists__Display_Position_in_Quick_Filters__c )</errorConditionFormula>
    <errorDisplayField>smartlists__Display_Position_in_Quick_Filters__c</errorDisplayField>
    <errorMessage>Display Position is required for Filters Panel fields</errorMessage>
</ValidationRule>