force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Display_Type_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Display_Type_Picklist</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;Picklist&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__Display_Type__c</errorDisplayField>
    <errorMessage>Picklist is not supported for Apex Data Source lists.</errorMessage>
</ValidationRule>