force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Editable_in_List_Related_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Editable_in_List_Related_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>smartlists__Editable_in_List__c &amp;&amp;(LEN( smartlists__Field_Name__c ) - LEN ( SUBSTITUTE ( smartlists__Field_Name__c , &apos;.&apos;, &apos;&apos;))) &gt; 1</errorConditionFormula>
    <errorDisplayField>smartlists__Editable_in_List__c</errorDisplayField>
    <errorMessage>Fields can only be edited if they are on the base object or are related to a parent record of the base object.
Example on Account: Parent.Parent.Name is not editable because it is on the parent account  of the parent account. Parent.Name is editable</errorMessage>
</ValidationRule>