force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_File_Preview.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_File_Preview</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Files&apos;) &amp;&amp; ISPICKVAL(smartlists__Display_Type__c, &apos;FILE_PREVIEW&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__Display_Type__c</errorDisplayField>
    <errorMessage>&apos;File Preview&apos; can only be used with Files list</errorMessage>
</ValidationRule>