force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Lookup_Subtitle.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Lookup_Subtitle</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( smartlists__Lookup_Subtitle_Field__c , &apos;.&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__Lookup_Subtitle_Field__c</errorDisplayField>
    <errorMessage>Lookup Subtitle cannot be a related field such as Account.Name</errorMessage>
</ValidationRule>