force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_Number_of_Columns.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_Number_of_Columns</fullName>
    <active>true</active>
    <errorConditionFormula>smartlists__Number_of_columns__c &lt; 1 ||  smartlists__Number_of_columns__c &gt; 3</errorConditionFormula>
    <errorDisplayField>smartlists__Number_of_columns__c</errorDisplayField>
    <errorMessage>Number of Columns must be between 1 and 3</errorMessage>
</ValidationRule>