force-app/main/default/objects/smartlists__Smart_List_Field__mdt/validationRules/smartlists__Check_URL_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_URL_Value</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( smartlists__URL_Value__c ) &amp;&amp;  ISPICKVAL( smartlists__Display_Type__c , &apos;URL_LABEL&apos;)</errorConditionFormula>
    <errorDisplayField>smartlists__URL_Value__c</errorDisplayField>
    <errorMessage>URL Value is required for Display Type &apos;URL with Label&apos;</errorMessage>
</ValidationRule>