force-app/main/default/objects/smartlists__Smart_List_Field__mdt/listViews/smartlists__All.listView-meta.xml
<ListView>
    <fullName>smartlists__All</fullName>
    <columns>smartlists__Smart_List_Definition__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>